# gstatsutils

./: .gitignore  LICENSE  README.md  TODO  TODO.txt  pyproject.toml  setup.cfg  setup.py  things.ipynb  tox.ini
.github/workflows/: tests.yml
src/gstats_utils/: __init__.py  fake_file.py  pythonutils.py
src/gstats_utils/pythonutils/: __init__.py  backport_types.py  equality.py  hashing.py  memory.py  misc.py
src/gstats_utils/pythonutils/betterbuiltin/: __init__.py  better_dict.py
src/gstatsutils/: __init__.py
src/gstatsutils/pythonutils/: equality.py  misc.py  pytypes.py
tests/: Dockerfile  test_fake_file.py  test_pythonutils.equality.py  test_pythonutils_equality.py  things.ipynb
