[metadata]
name = gstatsutils
description = A collection of python utils for me (glorifiedstatistics).
author = Justin Allen
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    gstatsutils
install_requires =
    numpy
python_requires = >=3.5
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    mypy
    tox

[options.package_data]
gstatsutils = py.typed